add NotfallKontakte and fixed bugs with views

--- a/app/src/main/res/layout/activity_tagesbuch.xml
+++ b/app/src/main/res/layout/activity_tagesbuch.xml
@@ -7,9 +7,10 @@
     tools:context=".Tagebuch">
 
     <include
-        android:id="@+id/include6"
+        android:id="@+id/include21"
         layout="@layout/toolbar_3"
-        app:layout_constraintBottom_toTopOf="@+id/toolbar"
+        android:layout_width="413dp"
+        android:layout_height="58dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,18 +20,19 @@
         layout="@layout/toolbar_bottom"
         android:layout_width="402dp"
         android:layout_height="53dp"
+        android:layout_marginEnd="9dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include6" />
+        app:layout_constraintTop_toBottomOf="@+id/include21" />
 
     <ScrollView
         android:layout_width="336dp"
         android:layout_height="583dp"
         android:layout_marginStart="63dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="21dp"
         android:layout_marginEnd="68dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
