--- a/app/src/main/res/layout/activity_datenschutz.xml
+++ b/app/src/main/res/layout/activity_datenschutz.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/include23"
+        android:id="@+id/includeDatenschutz"
         layout="@layout/toolbar_3" />
 
     <TextView
@@ -21,5 +21,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include23" />
+        app:layout_constraintTop_toBottomOf="@+id/includeDatenschutz" />
 </androidx.constraintlayout.widget.ConstraintLayout>
