--- a/app/src/main/res/layout/activity_kontakte.xml
+++ b/app/src/main/res/layout/activity_kontakte.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatBot">
+    tools:context=".Kontakte">
 
     <include
         android:id="@+id/include10"
@@ -107,6 +107,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="146dp"
         android:layout_marginBottom="40dp"
+        android:onClick="showNotfallkontakte"
         android:text="Notfallkontakte"
         android:textAllCaps="false"
         app:backgroundTint="@color/white"
