--- a/app/src/main/res/layout/activity_notfallkontakt.xml
+++ b/app/src/main/res/layout/activity_notfallkontakt.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".NotfallKontakte">
 
     <include
-        android:id="@+id/include21"
+        android:id="@+id/includeNotfall"
         layout="@layout/toolbar_3" />
 
     <LinearLayout
@@ -16,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include21"
+        app:layout_constraintTop_toBottomOf="@+id/includeNotfall"
         app:layout_constraintVertical_bias="0.391">
 
         <TextView
