--- a/app/src/main/res/layout/activity_ubungen_1_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_1_2.xml
@@ -6,14 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".Activities">
 
-    <include layout="@layout/toolbar_3" />
+    <include
+        android:id="@+id/include3"
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="689dp" />
+        android:layout_marginTop="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
     <ScrollView
         android:layout_width="350dp"
