--- a/app/src/main/res/layout/toolbar_3.xml
+++ b/app/src/main/res/layout/toolbar_3.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView14"
+            android:id="@+id/backImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/toolbar_icon_background"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView14"
+            app:layout_constraintStart_toEndOf="@+id/backImageView"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/ic_notfallkontakt" />
 
