--- a/app/src/main/res/layout/activity_ubungen_1_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_1_2.xml
@@ -17,17 +17,14 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        android:layout_marginTop="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include3" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="60dp" />
 
     <ScrollView
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="343dp"
+        android:layout_height="615dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -53,7 +50,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/include16" />
 
             <CheckBox
-                android:id="@+id/checkBox2"
+                android:id="@+id/daily_activity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CheckBox" />
