implement add new Ubung function

--- a/app/src/main/res/layout/activity_ubungen_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_2.xml
@@ -5,230 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TableRow
-        android:layout_width="336dp"
-        android:layout_height="42dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView75">
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="155dp"
-            android:layout_height="45dp"
-            android:text="Übungsname"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/textView73"
-            app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-        <CheckBox
-            android:id="@+id/checkBox1"
-            android:layout_width="155dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="0dp"
-            android:text="Übungsname"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/textView73"
-            app:layout_constraintTop_toBottomOf="@+id/textView73" />
-    </TableRow>
-
     <include layout="@layout/toolbar_3" />
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
-    <TextView
-        android:id="@+id/textView73"
-        android:layout_width="335dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="36dp"
-        android:text='Hier Würde der Titel "Ubungen gegen ... " stehen'
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view_activities_with_type"
+        android:layout_width="361dp"
+        android:layout_height="548dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include15" />
-
-    <TextView
-        android:id="@+id/textView75"
-        android:layout_width="294dp"
-        android:layout_height="55dp"
-        android:text="Abgeschlossene Übungen"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout7"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout7"
-        android:layout_width="337dp"
-        android:layout_height="309dp"
-        android:layout_marginTop="1dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.513"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView73">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="46dp">
-
-            <CheckBox
-                android:id="@+id/checkBox3"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox4"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="46dp">
-
-            <CheckBox
-                android:id="@+id/checkBox5"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox6"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="44dp">
-
-            <CheckBox
-                android:id="@+id/checkBox7"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox8"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="46dp">
-
-            <CheckBox
-                android:id="@+id/checkBox9"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox10"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="48dp">
-
-            <CheckBox
-                android:id="@+id/checkBox21"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox22"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="48dp">
-
-            <CheckBox
-                android:id="@+id/checkBox25"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-            <CheckBox
-                android:id="@+id/checkBox24"
-                android:layout_width="155dp"
-                android:layout_height="45dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="0dp"
-                android:text="Übungsname"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/textView73"
-                app:layout_constraintTop_toBottomOf="@+id/textView73" />
-        </TableRow>
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
