--- a/app/src/main/res/layout/activity_ubungen_1_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_1_2.xml
@@ -22,14 +22,15 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="343dp"
-        android:layout_height="615dp"
+        android:layout_width="372dp"
+        android:layout_height="530dp"
         android:fillViewport="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <LinearLayout
+            android:id="@+id/linearLayoutActivities"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -87,9 +88,26 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/closed_recycle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
 
+            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
+
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@mipmap/ic_add"
+        android:clickable="true"
+        android:focusable="true"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
