--- a/app/src/main/res/layout/activity_wiki.xml
+++ b/app/src/main/res/layout/activity_wiki.xml
@@ -27,101 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top" />
-
-    <LinearLayout
-        android:layout_width="337dp"
-        android:layout_height="211dp"
-        android:background="@color/white"
-        android:baselineAligned="true"
-        android:divider="@color/black"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/textView85"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
-
-        <TextView
-            android:id="@+id/textView80"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thema 1"
-            android:textSize="20sp" />
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <TextView
-            android:id="@+id/textView81"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Thema 2"
-            android:textSize="20sp" />
-
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <View
-            android:id="@+id/divider7"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <TextView
-            android:id="@+id/textView82"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text=" Sub-Thema 2.1\n Sub-Thema 2.2\n Sub-Thema 2.3\n Sub-Thema 2.4\n"
-            android:textSize="20sp" />
-
-        <View
-            android:id="@+id/divider6"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <TextView
-            android:id="@+id/textView83"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Thema 3"
-            android:textSize="20sp" />
-
-        <View
-            android:id="@+id/divider8"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
-
-        <TextView
-            android:id="@+id/textView84"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Thema 4"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView85"
-        android:layout_width="335dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="48dp"
-        android:text="Quellen und weitere Websites für die Information stehen."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <LinearLayout
         android:id="@+id/linearLayout8"
         android:layout_width="361dp"
@@ -161,5 +66,13 @@
             android:inputType="textPersonName" />
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/wiki_recycler"
+        android:layout_width="330dp"
+        android:layout_height="455dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
