--- a/app/src/main/res/layout/activity_wiki_info.xml
+++ b/app/src/main/res/layout/activity_wiki_info.xml
@@ -14,8 +14,8 @@
         tools:layout_editor_absoluteY="60dp" />
 
     <LinearLayout
-        android:layout_width="364dp"
-        android:layout_height="561dp"
+        android:layout_width="316dp"
+        android:layout_height="549dp"
         android:layout_marginTop="1dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,10 @@
             android:layout_width="match_parent"
             android:layout_height="109dp"
             android:layout_marginEnd="0dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="#2196F3"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
