--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -31,8 +31,8 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="287dp"
+        android:layout_height="438dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="65dp"
@@ -69,13 +69,6 @@
             android:layout_height="wrap_content"
             app:layout_column="1"
             app:layout_row="0" />
-
-        <Switch
-            android:id="@+id/switch1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_column="1"
-            app:layout_row="1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -189,6 +182,14 @@
             android:layout_height="wrap_content"
             app:layout_column="1"
             app:layout_row="4" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="69dp"
+            android:layout_height="wrap_content"
+            app:layout_column="1"
+            app:layout_gravity="center"
+            app:layout_row="1" />
 
     </androidx.gridlayout.widget.GridLayout>
 
